[tool.poetry]
name = "database-management"
version = "0.1.0"
description = ""
authors = ["Sebastián Dalceggio <sdalceggio@gmail.com>"]
readme = "README.md"
packages = [{include = "database_management"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.2"
sqlalchemy = "^2.0.16"
common-utils = {git = "https://github.com/sebastian-dalceggio/common_utils.git", rev = "main"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.4"
mypy = "^1.4.0"
pandas-stubs = "^2.0.2.230605"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
